--- a/androidApp/app/src/main/res/drawable/box.xml
+++ b/androidApp/app/src/main/res/drawable/box.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#E4FDFB"/>
+            <solid android:color="#E3E3E3"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
