--- a/androidApp/app/src/main/res/layout/activity_main.xml
+++ b/androidApp/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
         android:id="@+id/emergencyContactTex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="16dp"
         android:text="@string/emergency_contacts"
         android:textColor="#373737"
         android:textSize="20sp"
@@ -73,7 +73,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.17"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/connectionTest" />
+        app:layout_constraintTop_toTopOf="@+id/backgroundFiller" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/contactRecyclerView"
