--- a/androidApp/app/src/main/res/layout/recycler_view_layout.xml
+++ b/androidApp/app/src/main/res/layout/recycler_view_layout.xml
@@ -14,6 +14,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:hint="John"
+        android:textColor="#373737"
+        app:fontFamily="@font/aldrich"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
